<resources>
    <string name="app_name">챌린이</string>
    <string name="shared_pref_key">com.gdghackathon.monthlychallenges</string>
    <string name="shared_pref_challenge_id">challenge id</string>

    <string name="str_add_mission">+ 추가</string>

    <!-- activity_splash.xml -->
    <string name="splash_challiney_name">챌린이</string>
    <string name="splash_pharse">큰 것을 이루기 위해서는 하루에 하나씩\n작은 것을 이뤄나가는 것이 중요하다.</string>
    <string name="splash_author">- Challiney</string>

    <!-- activity_main.xml -->
    <string name="main_title">무기력 극뽁 챌린지</string>
    <string name="main_text">30일의 도전\n소소하지만 확실한 도전을 해볼까요?</string>
    <string name="main_create_challenge_button_text">⬆️ 직접 등록하기</string>

    <!-- activity_create_challenge.xml -->
    <string name="create_title">직접 도전 등록하기</string>
    <string name="create_description">앞으로 30일 동안 함께할\n챌린지 타이틀을 작성해주세요.</string>
    <string name="create_warning_desc">챌린지 타이틀은 20자 이내로 작성해 주세요.</string>
    <string name="create_confirm">확인</string>

    <!-- activity_detail_mission.xml -->
    <string name="mission_date">2021년 7월 11일</string>
    <string name="mission_title">아침밥 먹기</string>
    <string name="mission_memo">챌린지 성공</string>

    <!-- dialog_upload_photo.xml -->
    <string name="upload_photo_title">목표를 달성하였나요?</string>
    <string name="upload_photo_text">기록할 이미지를 추가해 주세요.</string>
    <string name="upload_button">이미지 등록</string>
    <string name="upload_no_text"><u>이미지 없이 등록할래요</u></string>

    <!-- dialog_write_memo.xml -->
    <string name="write_memo_title">✍️ 메모를 남겨볼까요?</string>
    <string name="write_memo_hint">챌린지 후기를 남겨주세요.</string>
    <string name="write_button">메모 등록</string>
    <string name="write_no_text"><u>메모 안남길래요</u></string>

    <!-- activity_challenge_contents.xml -->
    <string name="str_stop_challenge"><u>챌린지 중단하기</u></string>
    <string name="str_stop_challenge_desc">챌린지 중단 시, 이전 챌린지 내역이 모두 삭제됩니다. 정말 중단하시겠어요?</string>
    <string name="dialog_yes">예</string>
    <string name="dialog_no">아니오</string>

    <!-- fragment_set_challenge_missions.xml -->
    <string name="str_create_challenge">생성하기</string>
</resources>