<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="27dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/dr_rect_rounded_12">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="26dp"
        android:text="@string/write_memo_title"
        android:textSize="17sp"
        android:textColor="@color/color_dark_grey" />

    <EditText
        android:id="@+id/edittext_memo"
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:padding="17dp"
        android:gravity="top"
        android:background="@drawable/dr_rect_rounded_border_2"
        android:hint="@string/write_memo_hint"
        android:textSize="17sp"/>

    <Button
        android:id="@+id/button_write_memo"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="34dp"
        android:background="@drawable/dr_rect_rounded"
        android:backgroundTint="#d9d9d9"
        android:text="@string/write_button"
        android:textSize="17sp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textview_no_write_memo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="30dp"
        android:text="@string/write_no_text"
        android:textSize="17sp"
        android:textColor="@color/black" />

</LinearLayout>