<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="27dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/dr_rect_rounded_12">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/upload_photo_title"
        android:textSize="17sp"
        android:textColor="@color/color_dark_grey" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/upload_photo_text"
        android:textSize="15sp"
        android:textColor="@color/color_dark_grey" />

    <ImageView
        android:id="@+id/imageview_add_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="29dp"
        android:background="@drawable/dr_rect_rounded_border_2" />

    <Button
        android:id="@+id/button_upload_image"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/dr_rect_rounded"
        android:backgroundTint="#d9d9d9"
        android:text="@string/upload_photo_text"
        android:textSize="17sp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textview_no_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="30dp"
        android:text="@string/upload_no_text"
        android:textSize="17sp"
        android:textColor="@color/black" />

</LinearLayout>