<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageview_challiney_image"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/challiney_black"
        app:layout_constraintBottom_toTopOf="@id/textview_challiney_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textview_challiney_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_challiney_name"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintLeft_toLeftOf="@id/imageview_challiney_image"
        app:layout_constraintRight_toRightOf="@id/imageview_challiney_image"
        app:layout_constraintTop_toTopOf="@id/guideline" />

    <TextView
        android:id="@+id/textview_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/splash_pharse"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@id/imageview_challiney_image"
        app:layout_constraintRight_toRightOf="@id/imageview_challiney_image"
        app:layout_constraintTop_toBottomOf="@id/textview_challiney_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="70dp"
        android:text="@string/splash_author"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_phrase" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>